--- a/phtc/treatment_activity/management/commands/todo.txt
+++ b/phtc/treatment_activity/management/commands/todo.txt
@@ -23,3 +23,17 @@
 
 
 			Also I have to comment out / hide / remove from the model and view all the prelimianry crap.
+
+
+
+			
+                        <!--
+                           <% for (var i = 0; i < children_list.length; i++) { %>
+                              <% var answer = children_list[i]; %>
+                              <div>
+                                    <button type="button" class="btn btn-small btn-success btn-primary decision-point-button">
+                                        <%= answer %>
+                                    </button>
+                              </div>
+                            <% } %>
+
